--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -15,7 +15,7 @@ include_config_on_deploy = true
 scopes = "write_products"
 
 [auth]
-redirect_urls = [ "https://example.com/api/auth" ]
+redirect_urls = [ "https://lolicupapp.onrender.comapi/auth" ]
 
 [webhooks]
 api_version = "2024-07"
